--- a/frontend/workflow/angular.json
+++ b/frontend/workflow/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "b0817ec3-25db-4218-9036-9be2f1aeaaa8"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
